# dashrs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  grcov.yml  rustfmt.toml
.github/workflows/: check.yml  coverage.yml  rust-build.yml  rust-check-test.yml  rust-check-tests.yml  rustfmt.yml
benches/: level_processing_benchmark.rs
benches/data/: 40292513_special_rend_gjdownload_response
dash-rs-derive/: Cargo.toml
dash-rs-derive/src/: field.rs  lib.rs  struct_gen.rs  utils.rs
descriptions/: comment_user.yml  creator.yml  level.yml  level_comment.yml  newgrounds_song.yml  partial_level.yml  profile.yml  profile_comment.yml  searched.yml
examples/: download_featured_levels.rs  refresh_test_artifacts.rs
src/: lib.rs  response.rs  split.rs  util.rs
src/de/: error.rs  indexed.rs  mod.rs  thunk.rs
src/model/: creator.rs  mod.rs  song.rs
src/model/comment/: level.rs  mod.rs  profile.rs
src/model/creator/: mod.rs  raw.rs
src/model/level/: internal.rs  metadata.rs  mod.rs
src/model/level/object/: ids.rs  internal.rs  mod.rs  speed.rs
src/model/song/: mod.rs  raw.rs
src/model/user/: mod.rs  profile.rs  searched.rs
src/request/: comment.rs  level.rs  mod.rs  user.rs
src/ser/: error.rs  indexed.rs  mod.rs
src/serde/: mod.rs  thunk.rs
src/serde/de/: error.rs  indexed.rs  mod.rs
src/serde/ser/: error.rs  indexed.rs  mod.rs  request.rs
tests/: comment.rs  creator.rs  framework.rs  helper.rs  level.rs  level_meta.rs  misc.rs  profile.rs  response.rs  searched_user.rs  serde_roundtrips.rs  song.rs
tests/artifacts/comment_user/1705254/: processed  raw
tests/artifacts/creator/1295392/: processed  raw
tests/artifacts/creator/15557115/: processed  raw
tests/artifacts/creator/2073761/: processed  raw
tests/artifacts/creator/37573/: processed  raw
tests/artifacts/creator/8599996/: processed  raw
tests/artifacts/level/11774780/: processed  raw
tests/artifacts/level/897837/: processed  raw
tests/artifacts/level_comment/258976/: processed  raw
tests/artifacts/level_comment/259333/: processed  raw
tests/artifacts/level_comment/260007/: processed  raw
tests/artifacts/listed_level/11774780/: processed  raw
tests/artifacts/listed_level/23298409/: processed  raw
tests/artifacts/listed_level/63355989/: processed  raw
tests/artifacts/listed_level/72540/: processed  raw
tests/artifacts/listed_level/97598449/: processed  raw
tests/artifacts/profile/8451/: processed  raw
tests/artifacts/profile_comment/1922667/: processed  raw
tests/artifacts/searched_user/stardust1971/: processed  raw
tests/artifacts/song/1204676/: processed  raw
tests/artifacts/song/444085/: processed  raw
tests/artifacts/song/645631/: processed  raw
tests/data/: 11774780_dark_realm_gjdownload_response  11774780_dark_realm_raw_level_data  897837_time_pressure_gjdownload_response
(+2 files in other folders)
