[package]
name = "dash-rs"
version = "0.1.0"
authors = ["stadust <43299462+stadust@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.118", features = ["derive"]}
base64 = "0.11.0"
log = {version = "0.4.8", features = ["release_max_level_off"]}
percent-encoding = "2.1.0"
itoa = "0.4.4"
dtoa = "0.4.4"
flate2 = {version = "1.0.14", features = ["zlib"], default-features=false}

[dev-dependencies]
# benchmark
env_logger = "0.7.1"
criterion = "0.3"

[build-dependencies]
serde = {version = "1.0.104", features = ["derive"]}
serde_yaml = "0.8.14"

[[bench]]
name = "level_processing_benchmark"
harness = false
