[package]
name = "dash-rs"
version = "0.1.0"
authors = ["stadust <43299462+stadust@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.118", features = ["derive"]}
base64 = "0.21.5"
log = {version = "0.4.8" }
percent-encoding = "2.1.0"
itoa = "1.0.10"
dtoa = "0.4.4"
flate2 = {version = "1.0.14", features = ["zlib"], default-features=false}
variant_partial_eq = { git = "https://github.com/stadust/variant-partial-eq" }

[dev-dependencies]
# benchmark
env_logger = "0.7.1"
criterion = "0.3"

# Dependencies used by examples
reqwest = "0.11.17"
tokio = {version = "1.28.0", features = ["macros", "rt-multi-thread"]}

[build-dependencies]
serde = {version = "1.0.104", features = ["derive"]}
serde_yaml = "0.8.14"

[[bench]]
name = "level_processing_benchmark"
harness = false
